--- a/Catphotos.html
+++ b/Catphotos.html
@@ -1,4 +1,6 @@
-<h2>CatPhotoApp</h2>
+<html>
+<body>
+  <marquee><h2>CatPhotoApp</h2></marquee>
 <main>
   <p>Click here to view more <a href="#">cat photos</a>.</p>
 
@@ -13,3 +15,5 @@
   <p>Top 3 things cats hate:</p>
 
 </main>
+</body>
+</html>
